--- a/data/rush/18984.yaml
+++ b/data/rush/18984.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Rare
+  - set_number: RD/HC01-JP015
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP13-KR055
     set_name: Oblivion of the Flash
