--- a/data/rush/18370.yaml
+++ b/data/rush/18370.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
+  - set_number: RD/HC01-JP016
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/ORP1-KR041
     set_name: Over Rush Pack
