--- a/data/rush/18601.yaml
+++ b/data/rush/18601.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP005
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP12-KR019
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
