--- a/rush.yaml
+++ b/rush.yaml
@@ -88528,6 +88528,10 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
+  - set_number: RD/HC01-JP016
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/ORP1-KR041
     set_name: Over Rush Pack
@@ -92770,6 +92774,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP005
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP12-KR019
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
