--- a/data/rush/18370.yaml
+++ b/data/rush/18370.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Level 8 or lower monster on your opponent's field to face-down Defense Position.
+    Change 1 face-up Level 8 or lower monster on your opponent's field to face-down Defense Position.
   de:
   es:
   fr:
