--- a/data/cards/63261835.yaml
+++ b/data/cards/63261835.yaml
@@ -67,26 +67,41 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Secret Rare
+  - set_number: ????-EN???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   de:
   - set_number: DLCS-DE148
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Secret Rare
+  - set_number: ????-DE???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   fr:
   - set_number: DLCS-FR148
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Secret Rare
+  - set_number: ????-FR???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   it:
   - set_number: DLCS-IT148
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Secret Rare
+  - set_number: ????-IT???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   pt:
   - set_number: DLCS-PT148
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Secret Rare
+  - set_number: ????-PT???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   ja:
   - set_number: VP20-JP002
     set_name: Prismatic Special Pack
