--- a/data/cards/78371393.yaml
+++ b/data/cards/78371393.yaml
@@ -59,6 +59,9 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
+  - set_number: ????-EN???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   de:
   - set_number: PTDN-DE006
     set_name: Phantom Darkness
@@ -72,6 +75,9 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
+  - set_number: ????-DE???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   fr:
   - set_number: PTDN-FR006
     set_name: Phantom Darkness
@@ -81,6 +87,9 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
+  - set_number: ????-FR???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   it:
   - set_number: PTDN-IT006
     set_name: Phantom Darkness
@@ -94,6 +103,13 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
+  - set_number: ????-IT???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+  pt:
+  - set_number: ????-PT???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   ja:
   - set_number: PTDN-JP006
     set_name: Phantom Darkness
