--- a/data/rush/15917.yaml
+++ b/data/rush/15917.yaml
@@ -7,7 +7,7 @@ name:
   it: Spruzzalava il Puliscischettiere
   pt:
   ja: <ruby>洗<rt>せん</rt></ruby><ruby>銃<rt>じゅう</rt></ruby><ruby>士<rt>し</rt></ruby>ウォッシューター
-  ja_romaji: Senjūshi Wōsshūtā
+  ja_romaji: Senjūshi Wosshūtā
   ko: 세총사 워슈터
   ko_rr:
   zh-TW:
