--- a/data/cards/11228035.yaml
+++ b/data/cards/11228035.yaml
@@ -8,7 +8,7 @@ name:
   it: Anima Xyz
   pt:
   ja: エクシーズ・ソウル
-  ja_romaji: Ekushizū Sōru
+  ja_romaji: Ekushīzu Sōru
   ko: 엑시즈 소울
   ko_rr:
   zh-TW: 超量之魂
