--- a/data/cards/96300057.yaml
+++ b/data/cards/96300057.yaml
@@ -8,7 +8,7 @@ name:
   it: W-Catapulta Ala
   pt: W-Catapulta de Asa
   ja: <ruby>Ｗ<rt>ダブル</rt></ruby>－ウィング・カタパルト
-  ja_romaji: Daburu - Uingu Kataparuto
+  ja_romaji: Daburu - Wingu Kataparuto
   ko: W－윙 캐터펄트
   ko_rr:
   zh-TW:
