--- a/data/rush/19105.yaml
+++ b/data/rush/19105.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/HC01-JP056
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
   ko:
   - set_number: RD/TB01-KR012
     set_name: 'Triple Build Pack: Godbreath Wing'
