--- a/data/rush/19106.yaml
+++ b/data/rush/19106.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
+  - set_number: RD/HC01-JP054
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
   ko:
   - set_number: RD/TB01-KR013
     set_name: 'Triple Build Pack: Godbreath Wing'
