--- a/rush.yaml
+++ b/rush.yaml
@@ -108059,6 +108059,10 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/HC01-JP056
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
   ko:
   - set_number: RD/TB01-KR012
     set_name: 'Triple Build Pack: Godbreath Wing'
@@ -108127,6 +108131,10 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
+  - set_number: RD/HC01-JP054
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
   ko:
   - set_number: RD/TB01-KR013
     set_name: 'Triple Build Pack: Godbreath Wing'
@@ -127151,3 +127159,282 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1032799
+---
+konami_id:
+name:
+  en: Harpie Lady Pet Master
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハーピィ・レディ・<ruby>ＰＭ<rt>ペット・マスター</rt></ruby>
+  ja_romaji: Hāpyi Redi Petto Masutā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Harpie Lady" while in the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    墓地にいるこのカードのカード名は「ハーピィ・レディ」になる。
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes "Harpie Lady" until the end of your opponent's next turn. Then, if you have 3 "Harpie Lady" and/or "Harpie Ladies" face-up on your field, you can destroy 1 monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    このカードのカード名は次の相手ターン終了時まで、「ハーピィ・レディ」になる。その後、自分フィールドの表側表示の「ハーピィ・レディ」「ハーピィ三姉妹」が合計３体の場合、相手フィールドのモンスター１体を選んで破壊できる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Effect
+attribute: WIND
+level: 4
+atk: 1300
+def: 1400
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpieLadyPetMaster-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP018
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1033291
+---
+konami_id:
+name:
+  en: Splendid Slash
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スプレンディッド・スラッシュ
+  ja_romaji: Supurendiddo Surasshu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When a monster(s) on your field is destroyed by an opponent's attack or their card effect, place 1 "Harpie Lady" or 1 "Harpie Ladies" from your Graveyard on either the top or bottom of your Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分フィールドのモンスターが相手の攻撃または相手の効果で破壊された時、自分の墓地の「ハーピィ・レディ」または「ハーピィ三姉妹」１体をデッキの上か下に戻して発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Place 1 card from your opponent's field on the bottom of the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手フィールドのカード１枚を選んで持ち主のデッキの下に戻す。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Harpie
+images:
+- index: 1
+  image: SplendidSlash-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP070
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1033293
+---
+konami_id:
+name:
+  en: Progrigger Vancing
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プログリーガー・ヴァンセング
+  ja_romaji: Purogurīgā Vansengu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If your opponent has a face-up monster with 2500 ATK on their field, you can Special Summon this card from your hand face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手フィールドに表側表示モンスター（攻撃力２５００）がいる場合、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    なし
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This Attack Position card cannot be destroyed by battle with a monster with 2500 original ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    攻撃表示のこのカードは、元々の攻撃力が２５００のモンスターとの戦闘では破壊されない。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 1500
+images:
+- index: 1
+  image: ProgriggerVancing-RDDK01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/DK01-JP003
+    set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1033306
+---
+konami_id:
+name:
+  en: Jundee of the Dark Path
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>冥<rt>めい</rt></ruby><ruby>跡<rt>せき</rt></ruby>のジュンディー
+  ja_romaji: Meiseki no Jundī
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 10 or more cards in your Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分のデッキのカードが１０枚以上の場合に発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard. Then, if an EARTH Attribute monster(s) is among the cards sent, you can draw 1 card. If you do, place 1 card from your hand on the bottom of your Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分のデッキの上からカード３枚を墓地へ送る。その中にモンスター（地属性）がいた場合、さらに自分は１枚ドローできる。ドローした場合、さらに自分は手札１枚を選んでデッキの下に戻す。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast-Warrior / Effect
+attribute: EARTH
+level: 4
+atk: 1000
+def: 1000
+images:
+- index: 1
+  image: JundeeoftheDarkPath-RDDK01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/DK01-JP004
+    set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1033308
