--- a/data/rush/16331.yaml
+++ b/data/rush/16331.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: Secret Ace Pack 2022 Vol.1
     rarities:
     - Secret Rare
+  - set_number: RD/HC01-JP071
+    set_name: High-Grade Collection
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP05-KR024
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
