--- a/data/cards/05043010.yaml
+++ b/data/cards/05043010.yaml
@@ -241,6 +241,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: GPC1-KR007
+    set_name: Gopizza x Yu-Gi-Oh! Official Card Game Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   zh-CN:
   - set_number: MGP1-SC025
     set_name: Mega Pack 01
