--- a/data/cards/44508094.yaml
+++ b/data/cards/44508094.yaml
@@ -428,6 +428,10 @@ sets:
     - Common
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: GPC1-KR004
+    set_name: Gopizza x Yu-Gi-Oh! Official Card Game Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   zh-CN:
   - set_number: TRC1-SC005
     set_name: The Rarity Collection
