--- a/data/cards/84013237.yaml
+++ b/data/cards/84013237.yaml
@@ -469,6 +469,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: GPC1-KR005
+    set_name: Gopizza x Yu-Gi-Oh! Official Card Game Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   zh-TW:
   - set_number: ST14-TC039
     set_name: Duel Starter Deck
