--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -1219,6 +1219,10 @@ sets:
     set_name: Animation Chronicle 2022
     rarities:
     - Prismatic Secret Rare
+  - set_number: GPC1-KR002
+    set_name: Gopizza x Yu-Gi-Oh! Official Card Game Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   zh-TW:
   - set_number: ''
     set_name: e Jump lottery prize card
