--- a/data/cards/89943723.yaml
+++ b/data/cards/89943723.yaml
@@ -394,6 +394,10 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: GPC1-KR003
+    set_name: Gopizza x Yu-Gi-Oh! Official Card Game Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   zh-CN:
   - set_number: TRC1-SC003
     set_name: The Rarity Collection
