--- a/data/cards/kdb4998.yaml
+++ b/data/cards/kdb4998.yaml
@@ -378,6 +378,10 @@ sets:
     set_name: Prismatic Art Collection
     rarities:
     - Prismatic Secret Rare
+  - set_number: GPC1-KR009
+    set_name: Gopizza x Yu-Gi-Oh! Official Card Game Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   zh-TW:
   - set_number: GS06-TC001
     set_name: Gold Series 2014
