--- a/data/cards/kdb4999.yaml
+++ b/data/cards/kdb4999.yaml
@@ -386,6 +386,10 @@ sets:
     set_name: Prismatic Art Collection
     rarities:
     - Prismatic Secret Rare
+  - set_number: GPC1-KR008
+    set_name: Gopizza x Yu-Gi-Oh! Official Card Game Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   zh-TW:
   - set_number: GS06-TC003
     set_name: Gold Series 2014
