--- a/data/rush/18982.yaml
+++ b/data/rush/18982.yaml
@@ -45,6 +45,8 @@ property: Equip
 images:
 - index: 1
   image: CharisMagicScepterDeathWand-RDKP13-JP-R.png
+- index: 2
+  image: CharisMagicScepterDeathWand-RDHC01-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP13-JP053
