--- a/rush.yaml
+++ b/rush.yaml
@@ -106241,6 +106241,8 @@ property: Equip
 images:
 - index: 1
   image: CharisMagicScepterDeathWand-RDKP13-JP-R.png
+- index: 2
+  image: CharisMagicScepterDeathWand-RDHC01-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP13-JP053
@@ -127469,19 +127471,21 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（レベル５以下）を２体まで墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. If you Special Summoned "Celeb Rose Magician" by this effect, you can Special Summon 1 "Celeb Rose Witch" from your Graveyard face-up to your field.
+    Special Summon 1 Level 7 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. If you Special Summoned "Celeb Rose Magician" by this effect, you can also Special Summon 1 "Celeb Rose Witch" from your Graveyard face-up to your field.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル７以上／光属性／魔法使い族）１体を選び、自分フィールドに表側表示で特殊召喚する。この効果で「セレブローズ・マジシャン」を特殊召喚した場合、さらに自分の墓地の「セレブローズ・ウィッチ」１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
