--- a/data/rush/17339.yaml
+++ b/data/rush/17339.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Mirror Trap
 images:
 - index: 1
   image: SakuretsuForce-RDKP08-JP-C.png
