--- a/rush.yaml
+++ b/rush.yaml
@@ -59638,6 +59638,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Mirror Trap
 images:
 - index: 1
   image: SakuretsuForce-RDKP08-JP-C.png
@@ -97061,6 +97063,8 @@ attribute: DARK
 level: 7
 atk: 0
 def: 0
+series:
+- Maju
 images:
 - index: 1
   image: MajuGarzett-RDLGP1-JP-UR.png
@@ -97925,6 +97929,8 @@ attribute: DARK
 level: 6
 atk: 0
 def: 0
+series:
+- Maju
 legend: true
 images:
 - index: 1
