--- a/rush.yaml
+++ b/rush.yaml
@@ -40646,6 +40646,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Cat
 images:
 - index: 1
   image: ScaredyCats-RDKP06-JP-C.png
@@ -94172,7 +94174,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 2 monsters with 200 DEF and the same Level from your Graveyard face-up to your field. If you Special Summoned Normal Monsters by this effect, those Normal Monsters gain 2200 ATK until the end of this turn.
+    Special Summon 2 monsters with 200 DEF and the same Level from your Graveyard face-up to your field. If you Special Summoned Normal Monsters by this effect, they gain 2200 ATK until the end of this turn.
   de:
   es:
   fr:
