--- a/rush.yaml
+++ b/rush.yaml
@@ -22750,6 +22750,10 @@ sets:
     set_name: Versus Pack Maximum Force
     rarities:
     - Secret Rare
+  - set_number: RD/HC01-JP030
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/KP04-KR000
     set_name: 'Deck Mod Pack: Destined Power Destruction!!'
