--- a/data/rush/17333.yaml
+++ b/data/rush/17333.yaml
@@ -51,6 +51,11 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/HC01-JP068
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: RD/KP08-KR057
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
