--- a/data/rush/17209.yaml
+++ b/data/rush/17209.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: Gold Rush Pack
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP012
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/GRP1-KR027
     set_name: Grand Rush Pack
