--- a/rush.yaml
+++ b/rush.yaml
@@ -90875,6 +90875,10 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
     rarities:
     - Secret Rare
+  - set_number: RD/HC01-JP034
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/SR02-KR007
     set_name: Secret Record Pack 2 Vol.2
