--- a/data/cards/97362768.yaml
+++ b/data/cards/97362768.yaml
@@ -8,7 +8,7 @@ name:
   it: Pistola Spark
   pt: Arma Spark
   ja: スパークガン
-  ja_romaji: Supākugan
+  ja_romaji: Supāku Gan
   ko: 스파크 건
   ko_rr:
   zh-TW:
