--- a/data/cards/23995346.yaml
+++ b/data/cards/23995346.yaml
@@ -53,6 +53,7 @@ images:
   illustration: BlueEyesUltimateDragon-TF05-JP-VG-2-artwork.png
 - index: 3
   image: BlueEyesUltimateDragon-MSC1-JP-C.png
+  illustration: BlueEyesUltimateDragon-CA-3.png
 sets:
   en:
   - set_number: GLD1-EN028
