--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -68,21 +68,25 @@ images:
   illustration: DarkMagicianGirl-TF04-EN-VG-3-artwork.png
 - index: '3.2'
   image: DarkMagicianGirl-DP23-JP-HGR.png
+  illustration: DarkMagicianGirl-OW-6.png
 - index: 4
   image: DarkMagicianGirl-LART-EN-UR-LE-2021.png
   illustration: DarkMagicianGirl-TF05-JP-VG-4-artwork.png
 - index: 5
   image: DarkMagicianGirl-MVPL-JP-KCC.png
+  illustration: DarkMagicianGirl-JP-CA-5.png
 - index: '5.1'
   image: DarkMagicianGirl-MVP1-EN-ScR-1E-Europe.png
   illustration: DarkMagicianGirl-OW-5.png
 - index: '5.2'
   image: DarkMagicianGirl-MVP1-EN-ScR-1E.png
+  illustration: DarkMagicianGirl-EN-CA-5.png
 - index: 6
   image: DarkMagicianGirl-HC01-JP-UR.png
   illustration: DarkMagicianGirl-OW-4.png
 - index: '6.1'
   image: DarkMagicianGirl-MP22-EN-PScR-1E.png
+  illustration: DarkMagicianGirl-EN-CA-6.png
 sets:
   en:
   - set_number: RDS-ENSE2
