--- a/data/cards/yugipedia1033526.yaml
+++ b/data/cards/yugipedia1033526.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＦＡ<rt>フルアーマード</rt></ruby>－ホープ・レイ・ランサー
-  ja_romaji: Furu Āmādo - Hōpu Rei Ransā
+  ja_romaji: Furuāmādo - Hōpu Rei Ransā
   ko:
   ko_rr:
   zh-TW:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Level 4 monsters
-    Once per turn, you can also Xyz Summon "Full Armored Utopic Ray Lancer" by discarding 1 Spell/Trap, and using 1 Rank 4 or lower Xyz Monster you control. (Transfer its materials to this card.) Monsters your opponent controls lose 500 ATK. Once per Battle Phase, at the start of the Battle Phase: You can negate the effects of all Attack Position monsters your opponent currently controls. When this attacking card destroys an opponent's monster by battle: You can detach 1 material from this card; it make a second attack in a row.
+    Once per turn, you can also Xyz Summon "Full Armored Utopic Ray Lancer" by discarding 1 Spell/Trap, and using 1 Rank 4 or lower Xyz Monster you control. (Transfer its materials to this card.) Monsters your opponent controls lose 500 ATK. Once per Battle Phase, at the start of the Battle Phase: You can negate the effects of all Attack Position monsters your opponent currently controls. When this attacking card destroys an opponent's monster by battle: You can detach 1 material from this card; it can make a second attack in a row.
   de:
   es:
   fr:
