--- a/data/cards/53776969.yaml
+++ b/data/cards/53776969.yaml
@@ -54,6 +54,7 @@ materials: 1 "Scareclaw" monster or 1 "Visas Starfrost"
 series:
 - Heart
 - Scareclaw
+- Field Searcher
 images:
 - index: 1
   image: ScareclawLightHeart-MP23-EN-PScR-1E.png
