--- a/data/cards/76184692.yaml
+++ b/data/cards/76184692.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um gigante de um só olho com braços largos e poderosos. Tenha cuidado...
   ja: |-
-    一つ目の巨人。太い腕で殴りかかってくる。要注意。
+    <ruby>一<rt>ひと</rt></ruby>つ<ruby>目<rt>め</rt></ruby>の<ruby>巨<rt>きょ</rt></ruby><ruby>人<rt>じん</rt></ruby>。<ruby>太<rt>ふと</rt></ruby>い<ruby>腕<rt>うで</rt></ruby>で<ruby>殴<rt>なぐ</rt></ruby>りかかってくる。<ruby>要<rt>よう</rt></ruby><ruby>注<rt>ちゅう</rt></ruby><ruby>意<rt>い</rt></ruby>。
   ko: |-
     외눈박이의 거인. 거대한 근육질의 팔로 적을 압도한다. 방심은 금물.
   zh-TW: |-
