--- a/data/cards/09159938.yaml
+++ b/data/cards/09159938.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Inteiramente cinzenta, esta besta tem sido raramente vista por olhos mortais.
   ja: |-
-    からだが灰色のけもの。あまり見かけない貴重ないきもの。
+    からだが<ruby>灰<rt>はい</rt></ruby><ruby>色<rt>いろ</rt></ruby>のけもの。あまり<ruby>見<rt>み</rt></ruby>かけない<ruby>貴<rt>き</rt></ruby><ruby>重<rt>ちょう</rt></ruby>ないきもの。
   ko: |-
     온몸이 회색빛의 털로 덥힌, 아주 보기 드문 희귀한 생명체.
   zh-TW: |-
