--- a/data/cards/73539069.yaml
+++ b/data/cards/73539069.yaml
@@ -50,6 +50,8 @@ attribute: DARK
 link_arrows:
 - ⬅
 atk: 1000
+series:
+- Field Searcher
 images:
 - index: 1
   image: StrikerDragon-RA01-EN-SR-1E.png
