--- a/data/cards/90357090.yaml
+++ b/data/cards/90357090.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um lobo da neve que é lindo aos olhos, mas absolutamente letal em combate.
   ja: |-
-    白銀に輝くオオカミ。見た目は美しいが、性格は凶暴。
+    <ruby>白<rt>はく</rt></ruby><ruby>銀<rt>ぎん</rt></ruby>に<ruby>輝<rt>かがや</rt></ruby>くオオカミ。<ruby>見<rt>み</rt></ruby>た<ruby>目<rt>め</rt></ruby>は<ruby>美<rt>うつく</rt></ruby>しいが、<ruby>性<rt>せい</rt></ruby><ruby>格<rt>かく</rt></ruby>は<ruby>凶<rt>きょう</rt></ruby><ruby>暴<rt>ぼう</rt></ruby>。
   ko: |-
     은백색으로 빛나는 늑대. 겉모습은 근사하지만, 성격은 흉폭하다.
   zh-TW: |-
