--- a/data/cards/91703676.yaml
+++ b/data/cards/91703676.yaml
@@ -9,7 +9,7 @@ name:
   pt: Combustão Celeste do Rei de Fogo
   ja: <ruby>炎<rt>えん</rt></ruby><ruby>王<rt>おう</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>焼<rt>しょう</rt></ruby>
   ja_romaji: En'ōshin Tenshō
-  ko:
+  ko: 염왕신천소
   ko_rr:
   zh-TW:
   zh-CN:
@@ -28,7 +28,8 @@ text:
     Escolha um mesmo número de monstros "Rei(s) de Fogo" que você controla e cards que seu oponente controla; destrua-os. Se um ou mais cards "Rei(s) de Fogo" que você controla seriam destruídos por um efeito de card, em vez disso, você pode banir este card do seu Cemitério. Você só pode usar 1 efeito de "Combustão Celeste do Rei de Fogo" por turno e apenas uma vez por turno.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分フィールドの「炎王」モンスターと相手フィールドのカードをそれぞれ同じ数だけ対象として発動できる。そのカードを破壊する。②：自分フィールドの「炎王」カードが効果で破壊される場合、代わりに墓地のこのカードを除外できる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신 필드의 "염왕" 몬스터와 상대 필드의 카드를 각각 같은 수만큼 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. ②: 자신 필드의 "염왕" 카드가 효과로 파괴될 경우, 대신에 묘지의 이 카드를 제외할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Spell
