--- a/data/cards/40374923.yaml
+++ b/data/cards/40374923.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um mamute que proteje os túmulos de seu bando e que enfrenta ladrões de túmulos impiedosamente.
   ja: |-
-    仲間のお墓を守るマンモス。墓荒らしを容赦なく攻撃。
+    <ruby>仲<rt>なか</rt></ruby><ruby>間<rt>ま</rt></ruby>のお<ruby>墓<rt>はか</rt></ruby>を<ruby>守<rt>まも</rt></ruby>るマンモス。<ruby>墓<rt>はか</rt></ruby><ruby>荒<rt>あ</rt></ruby>らしを<ruby>容<rt>よう</rt></ruby><ruby>赦<rt>しゃ</rt></ruby>なく<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby>。
   ko: |-
     동료들의 무덤을 지키는 맘모스. 도굴꾼은 절대 용서치 않고 공격한다.
   zh-TW: |-
