--- a/data/cards/64182380.yaml
+++ b/data/cards/64182380.yaml
@@ -9,7 +9,7 @@ name:
   pt: Eternidade Garunix, o Hyang dos Reis de Fogo
   ja: <ruby>炎<rt>えん</rt></ruby><ruby>王<rt>おう</rt></ruby><ruby>神<rt>しん</rt></ruby> ガルドニクス・エタニティ
   ja_romaji: En'ōshin Garudonikusu Etaniti
-  ko:
+  ko: 염왕신 가루도닉스 이터니티
   ko_rr:
   zh-TW:
   zh-CN:
@@ -35,7 +35,9 @@ text:
   ja: |-
     レベル８モンスター×２体以上
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＸ召喚した場合に発動できる。フィールドの他のモンスターを全て破壊する。②：このカードのＸ素材を１つ取り除き、フィールドの魔法・罠カード１枚を対象として発動できる。そのカードを破壊し、このカードの攻撃力を５００アップする。③：Ｘ素材を持っているこのカードが破壊された場合に発動できる。このカードが持っていたＸ素材の数まで、自分の墓地から「炎王」モンスターを特殊召喚する。
-  ko:
+  ko: |-
+    레벨 8 몬스터 × 2장 이상
+    이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 엑시즈 소환했을 경우에 발동할 수 있다. 필드의 다른 몬스터를 전부 파괴한다. ②: 이 카드의 엑시즈 소재를 1개 제거하고, 필드의 마법 / 함정 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 파괴하고, 이 카드의 공격력을 500 올린다. ③: 엑시즈 소재를 가지고 있는 이 카드가 파괴되었을 경우에 발동할 수 있다. 이 카드가 가지고 있던 엑시즈 소재의 수까지, 자신 묘지에서 "염왕" 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
