--- a/data/cards/85705804.yaml
+++ b/data/cards/85705804.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um terrível pássaro que ataca dos céus com uma cauda em forma de chicote.
   ja: |-
-    しっぽが長い鳥。そのしっぽで空中から攻撃する。
+    しっぽが<ruby>長<rt>なが</rt></ruby>い<ruby>鳥<rt>とり</rt></ruby>。そのしっぽで<ruby>空<rt>くう</rt></ruby><ruby>中<rt>ちゅう</rt></ruby>から<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby>する。
   ko: |-
     꼬리가 긴 새. 그 꼬리로 공중에서 공격한다.
   zh-TW: |-
