--- a/data/cards/38199696.yaml
+++ b/data/cards/38199696.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Aumente os seus Life Points em 500 pontos.
   ja: |-
-    自分は５００ライフポイント回復する。
+    <ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>は５００ライフポイント<ruby>回<rt>かい</rt></ruby><ruby>復<rt>ふく</rt></ruby>する。
   ko: |-
     자신은 라이프 포인트를 500 포인트 회복한다.
   zh-TW: |-
