--- a/data/cards/53129443.yaml
+++ b/data/cards/53129443.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Destrua todos os monstros no campo.
   ja: |-
-    ①：フィールドのモンスターを全て破壊する。
+    ①：フィールドのモンスターを<ruby>全<rt>すベ</rt></ruby>て<ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby>する。
   ko: |-
     ①: 필드의 몬스터를 전부 파괴한다.
   zh-TW: |-
