--- a/data/cards/66788016.yaml
+++ b/data/cards/66788016.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Destrua 1 monstro com o menor ATK virado para cima que o seu oponente controla (Se ocorrer um empate, selecione o monstro a ser destruído).
   ja: |-
-    ①：相手フィールドの攻撃力が一番低いモンスター１体を破壊する。
+    ①：<ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>フィールドの<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>力<rt>りょく</rt></ruby>が<ruby>一<rt>いち</rt></ruby><ruby>番<rt>ばん</rt></ruby><ruby>低<rt>ひく</rt></ruby>いモンスター１<ruby>体<rt>たい</rt></ruby>を<ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby>する。
   ko: |-
     상대 필드 위의 공격력이 가장 낮은 몬스터 1장을 파괴한다.
   zh-TW: |-
