--- a/data/cards/91595718.yaml
+++ b/data/cards/91595718.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um monstro do Tipo Mago equipado com este card aumenta o seu ATK e DEF em 300 pontos.
   ja: |-
-    魔法使い族モンスターにのみ装備可能。装備モンスターの攻撃力・守備力は３００ポイントアップする。
+    <ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>使<rt>つか</rt></ruby>い<ruby>族<rt>ぞく</rt></ruby>モンスターにのみ<ruby>装<rt>そう</rt></ruby><ruby>備<rt>び</rt></ruby><ruby>可<rt>か</rt></ruby><ruby>能<rt>のう</rt></ruby>。<ruby>装<rt>そう</rt></ruby><ruby>備<rt>び</rt></ruby>モンスターの<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>力<rt>りょく</rt></ruby>・<ruby>守<rt>しゅ</rt></ruby><ruby>備<rt>び</rt></ruby><ruby>力<rt>りょく</rt></ruby>は３００ポイントアップする。
   ko: |-
     마법사족 몬스터에만 장착 가능. 장착 몬스터의 공격력 / 수비력은 300 포인트 올린다.
   zh-TW: |-
