--- a/data/cards/yugipedia1034235.yaml
+++ b/data/cards/yugipedia1034235.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 盃満ちる燦幻荘
-  ja_romaji:
+  ja: <ruby>盃<rt>さかずき</rt></ruby><ruby>満<rt>み</rt></ruby>ちる<ruby>燦<rt>さん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>荘<rt>そう</rt></ruby>
+  ja_romaji: Sakazuki Michiru Sangensō
   ko:
   ko_rr:
   zh-TW:
