--- a/data/rush/16953.yaml
+++ b/data/rush/16953.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel Duel Disk
     rarities:
     - Secret Rare
+  - set_number: RD/HC01-JP031
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/SR01-KR002
     set_name: Secret Record Pack
