--- a/data/rush/17287.yaml
+++ b/data/rush/17287.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP007
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP08-KR011
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
