--- a/data/cards/05368615.yaml
+++ b/data/cards/05368615.yaml
@@ -8,7 +8,7 @@ name:
   it: Steam Gyroid
   pt: Giroide a Vapor
   ja: スチームジャイロイド
-  ja_romaji: Suchīmujairoido
+  ja_romaji: Suchīmu Jairoido
   ko: 스팀자이로이드
   ko_rr:
   zh-TW:
