--- a/data/rush/18684.yaml
+++ b/data/rush/18684.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the total original ATK of the 2 monsters Tributed for the Tribute Summon of this card in Attack Position].
+    This card gains ATK equal to [the total original ATK of the 2 monsters Tributed for its Tribute Summon in Attack Position].
   de:
   es:
   fr:
