--- a/rush.yaml
+++ b/rush.yaml
@@ -97072,7 +97072,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the total original ATK of the 2 monsters Tributed for the Tribute Summon of this card in Attack Position].
+    This card gains ATK equal to [the total original ATK of the 2 monsters Tributed for its Tribute Summon in Attack Position].
   de:
   es:
   fr:
@@ -97938,7 +97938,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the original ATK of 1 monster Tributed for the Tribute Summon of this card in Attack Position] x 2.
+    This card gains ATK equal to [the original ATK of 1 monster Tributed for its Tribute Summon in Attack Position] x 2.
   de:
   es:
   fr:
