--- a/data/cards/59197169.yaml
+++ b/data/cards/59197169.yaml
@@ -36,6 +36,8 @@ text:
     场上表侧表示存在的恶魔族·魔法师族怪兽的攻击力·守备力上升200。场上表侧表示存在的天使族怪兽的攻击力·守备力下降200。
 card_type: Spell
 property: Field
+series:
+- Type Booster
 images:
 - index: 1
   image: Yami-LOB-EN-C-UE-25thAnniversaryEdition.png
