--- a/data/cards/50913601.yaml
+++ b/data/cards/50913601.yaml
@@ -36,6 +36,8 @@ text:
     场上表侧表示存在的龙族·鸟兽族·雷族怪兽的攻击力·守备力上升200。
 card_type: Spell
 property: Field
+series:
+- Type Booster
 images:
 - index: 1
   image: Mountain-LOB-EN-C-UE-25thAnniversaryEdition.png
