--- a/data/cards/yugipedia1034233.yaml
+++ b/data/cards/yugipedia1034233.yaml
@@ -32,6 +32,7 @@ attribute: FIRE
 level: 7
 atk: 2600
 def: 2000
+materials: 1 Dragon-Type Tuner + 1 or more non-Tuner Dragon-Type monsters
 series:
 - Brightfleet
 images:
