--- a/data/cards/yugipedia1034234.yaml
+++ b/data/cards/yugipedia1034234.yaml
@@ -32,6 +32,7 @@ attribute: FIRE
 level: 10
 atk: 3000
 def: 3000
+materials: 1 Dragon-Type Tuner + 1 or more non-Tuner Dragon-Type monsters
 series:
 - Brightfleet
 images:
