--- a/data/rush/18685.yaml
+++ b/data/rush/18685.yaml
@@ -56,6 +56,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RD/HC01-JP049
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
   ko:
   - set_number: RD/LGP1-KR005
     set_name: Legend Awakening Pack
