--- a/rush.yaml
+++ b/rush.yaml
@@ -97171,6 +97171,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RD/HC01-JP049
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
   ko:
   - set_number: RD/LGP1-KR005
     set_name: Legend Awakening Pack
@@ -127607,3 +127611,194 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1033540
+---
+konami_id:
+name:
+  en: Shadow Flower Dance
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>花<rt>か</rt></ruby><ruby>牙<rt>げ</rt></ruby><ruby>蘭<rt>らん</rt></ruby><ruby>舞<rt>ぶ</rt></ruby>
+  ja_romaji: Kageranbu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have a monster on your field, shuffle 3 Plant Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Then, you can make up to 3 face-up non-Plant Type monsters on your opponent's field lose 300 ATK/DEF until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Shadow Flower
+images:
+- index: 1
+  image: ShadowFlowerDance-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP067
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1034451
+---
+konami_id:
+name:
+  en: Flower Fan Clematis
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>花<rt>か</rt></ruby><ruby>牙<rt>げ</rt></ruby>アーマー・クレマチス
+  ja_romaji: Kage Āmā Kuremachisu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If your LP are equal to or higher than your opponent's LP during the turn you Normal Summoned this card, change this Attack Position card to face-up Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Until the end of your opponent's next turn, while your LP are equal to or higher than your opponent's LP, this card cannot be destroyed by battle. Then, if you have 3 or more monsters in your Graveyard, you can Special Summon 1 Plant Type monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Plant / Effect
+attribute: EARTH
+level: 8
+atk: 2500
+def: 1500
+series:
+- Shadow Flower
+images:
+- index: 1
+  image: FlowerFanClematis-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP072
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1034452
+---
+konami_id:
+name:
+  en: Etraynze the Shadow Flower Restricter
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>花<rt>か</rt></ruby><ruby>牙<rt>げ</rt></ruby><ruby>封<rt>ふう</rt></ruby>じのエトランゼ
+  ja_romaji: Kagefūji no Etoranze
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Etraynze the Shadow Flower Ninja" while in the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 1 Plant Type monster from your Graveyard on the bottom of the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes the same as the name of 1 Plant Type monster in your Graveyard this turn. Then, you can Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Plant / Effect
+attribute: EARTH
+level: 4
+atk: 1000
+def: 1000
+series:
+- Shadow Flower
+images:
+- index: 1
+  image: EtraynzetheShadowFlowerRestricter-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP041
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1034455
