--- a/data/rush/yugipedia1034451.yaml
+++ b/data/rush/yugipedia1034451.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドにモンスターがいる場合、自分の墓地のモンスター（植物族）３体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。その後、相手フィールドの表側表示モンスター（植物族以外）を３体まで選んでその攻撃力・守備力をターン終了時まで３００ダウンできる。
   ko:
   zh-TW:
   zh-CN:
