--- a/data/rush/yugipedia1034452.yaml
+++ b/data/rush/yugipedia1034452.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに、自分のＬＰが相手のＬＰ以上の場合、攻撃表示のこのカードを表側守備表示にして発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    次の相手ターン終了時まで、自分のＬＰが相手のＬＰ以上の間、このカードは戦闘では破壊されない。自分の墓地にモンスターが３体以上いる場合、さらに自分の墓地のモンスター（植物族）１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
