--- a/rush.yaml
+++ b/rush.yaml
@@ -127634,7 +127634,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドにモンスターがいる場合、自分の墓地のモンスター（植物族）３体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -127646,7 +127647,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。その後、相手フィールドの表側表示モンスター（植物族以外）を３体まで選んでその攻撃力・守備力をターン終了時まで３００ダウンできる。
   ko:
   zh-TW:
   zh-CN:
@@ -127690,7 +127692,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに、自分のＬＰが相手のＬＰ以上の場合、攻撃表示のこのカードを表側守備表示にして発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -127702,7 +127705,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    次の相手ターン終了時まで、自分のＬＰが相手のＬＰ以上の間、このカードは戦闘では破壊されない。自分の墓地にモンスターが３体以上いる場合、さらに自分の墓地のモンスター（植物族）１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -127750,19 +127754,21 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    墓地にいるこのカードのカード名は「花牙クノイチ・エトランゼ」になる。
   ko:
   zh-TW:
   zh-CN:
 requirement:
   en: |-
-    Place 1 Plant Type monster from your Graveyard on the bottom of the Deck.
+    Place 1 Plant Type monster from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（植物族）１体をデッキの下に戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -127774,7 +127780,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（植物族）１体を選ぶ。このカードのカード名はこのターン、選んだモンスターと同じカード名になる。その後、自分の墓地の「フュージョン」１枚を選んで自分の魔法＆罠ゾーンにセットできる。
   ko:
   zh-TW:
   zh-CN:
