--- a/data/rush/15228.yaml
+++ b/data/rush/15228.yaml
@@ -50,6 +50,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Field
+series:
+- Type Booster
 images:
 - index: 1
   image: Mountain-RDSD03-JP-C.png
