--- a/rush.yaml
+++ b/rush.yaml
@@ -127820,3 +127820,48 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1034455
+---
+konami_id:
+name:
+  en: Gemini Elf
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    Elf twins that alternate their attacks.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    交互に攻撃を仕掛けてくる、エルフの双子姉妹。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Normal
+attribute: EARTH
+level: 4
+atk: 1900
+def: 900
+legend: true
+images:
+- index: 1
+  image: GeminiElf-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP029
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 1034536
