--- a/data/cards/yugipedia1034233.yaml
+++ b/data/cards/yugipedia1034233.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Brightfleet Risedragon Bident Dragion
+  en: Sangen Risedragon Bident Dragion
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Dragon Tuner + 1+ non-Tuner Dragon monsters
-    If this card is Synchro Summoned: You can target 1 FIRE Dragon monster in your GY; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Dragon monsters. You can only use this effect of "Brightfleet Risedragon Bident Dragion" once per turn. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 Spell/Trap on the field. You can only use this effect of "Brightfleet Risedragon Bident Dragion" once per Duel.
+    If this card is Synchro Summoned: You can target 1 FIRE Dragon monster in your GY; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Dragon monsters. You can only use this effect of "Sangen Risedragon Bident Dragion" once per turn. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 Spell/Trap on the field. You can only use this effect of "Sangen Risedragon Bident Dragion" once per Duel.
   de:
   es:
   fr:
@@ -34,10 +34,10 @@ atk: 2600
 def: 2000
 materials: 1 Dragon-Type Tuner + 1 or more non-Tuner Dragon-Type monsters
 series:
-- Brightfleet
+- Sangen
 images:
 - index: 1
-  image: BrightfleetRisedragonBidentDragion-LEDE-JP-OP.png
+  image: SangenRisedragonBidentDragion-LEDE-JP-OP.png
 sets:
   ja:
   - set_number: LEDE-JP039
