--- a/data/cards/yugipedia1034234.yaml
+++ b/data/cards/yugipedia1034234.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Brightfleet Superdragon Transcend Dragion
+  en: Sangen Superdragon Transcend Dragion
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Dragon Tuner + 1+ non-Tuner Dragon monsters
-    If this card is Synchro Summoned: You can change all monsters on the field to Attack Position. All your opponent's monsters must attack, if able, also your opponent cannot activate cards or effects during the Battle Phase. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 card on the field. You can only use this effect of "Brightfleet Superdragon Transcend Dragion" once per Duel.
+    If this card is Synchro Summoned: You can change all monsters on the field to Attack Position. All your opponent's monsters must attack, if able, also your opponent cannot activate cards or effects during the Battle Phase. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 card on the field. You can only use this effect of "Sangen Superdragon Transcend Dragion" once per Duel.
   de:
   es:
   fr:
@@ -34,10 +34,10 @@ atk: 3000
 def: 3000
 materials: 1 Dragon-Type Tuner + 1 or more non-Tuner Dragon-Type monsters
 series:
-- Brightfleet
+- Sangen
 images:
 - index: 1
-  image: BrightfleetSuperdragonTranscendDragion-LEDE-JP-OP.png
+  image: SangenSuperdragonTranscendDragion-LEDE-JP-OP.png
 sets:
   ja:
   - set_number: LEDE-JP040
