--- a/data/cards/yugipedia1034235.yaml
+++ b/data/cards/yugipedia1034235.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Overflowing Brightfleet Manor
+  en: Brimming Sangen Manor
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    FIRE Dragon monsters you control are unaffected by your opponent's activated effects during your Main Phase 1 only. During your Main Phase: You can add 1 "Bestowed Dragon" monster from your Deck to your hand, then discard 1 card. You can only use this effect of "Overflowing Brightfleet Manor" once per turn. If this card is destroyed during the Battle Phase: You can target 1 Dragon Synchro Monster you control; its ATK becomes doubled.
+    FIRE Dragon monsters you control are unaffected by your opponent's activated effects during your Main Phase 1 only. During your Main Phase: You can add 1 "Tenpai Dragon" monster from your Deck to your hand, then discard 1 card. You can only use this effect of "Brimming Sangen Manor" once per turn. If this card is destroyed during the Battle Phase: You can target 1 Dragon Synchro Monster you control; its ATK becomes doubled.
   de:
   es:
   fr:
@@ -28,10 +28,10 @@ text:
 card_type: Spell
 property: Field
 series:
-- Brightfleet
+- Sangen
 images:
 - index: 1
-  image: OverflowingBrightfleetManor-LEDE-JP-OP.png
+  image: BrimmingSangenManor-LEDE-JP-OP.png
 sets:
   ja:
   - set_number: LEDE-JP059
