--- a/data/cards/yugipedia1034230.yaml
+++ b/data/cards/yugipedia1034230.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Bestowed Dragon Paidra
+  en: Tenpai Dragon Baidora
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can take 1 "Brightfleet" Spell/Trap from your Deck, and either add it to your hand or Set it. You can only use this effect of "Bestowed Dragon Paidra" once per turn. You take no battle damage from battles involving your FIRE Dragon monsters. Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control.
+    If this card is Normal or Special Summoned: You can take 1 "Sangen" Spell/Trap from your Deck, and either add it to your hand or Set it. You can only use this effect of "Tenpai Dragon Baidora" once per turn. You take no battle damage from battles involving your FIRE Dragon monsters. Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control.
   de:
   es:
   fr:
@@ -32,10 +32,10 @@ level: 3
 atk: 1700
 def: 1000
 series:
-- Bestowed Dragon
+- Tenpai Dragon
 images:
 - index: 1
-  image: BestowedDragonPaidra-LEDE-JP-OP.png
+  image: TenpaiDragonBaidora-LEDE-JP-OP.png
 sets:
   ja:
   - set_number: LEDE-JP016
