--- a/data/cards/yugipedia1034231.yaml
+++ b/data/cards/yugipedia1034231.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Bestowed Dragon Fadra
+  en: Tenpai Dragon Fadora
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned, OR, at the start of the Damage Step, if a monster battles: You can target 1 Level 4 or lower FIRE Dragon monster in your GY; Special Summon it. You can only use this effect of "Bestowed Dragon Fadra" once per turn. Your FIRE Dragon monsters cannot be destroyed by battle. Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control.
+    If this card is Normal or Special Summoned, OR, at the start of the Damage Step, if a monster battles: You can target 1 Level 4 or lower FIRE Dragon monster in your GY; Special Summon it. You can only use this effect of "Tenpai Dragon Fadora" once per turn. Your FIRE Dragon monsters cannot be destroyed by battle. Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control.
   de:
   es:
   fr:
@@ -32,10 +32,10 @@ level: 3
 atk: 1600
 def: 1000
 series:
-- Bestowed Dragon
+- Tenpai Dragon
 images:
 - index: 1
-  image: BestowedDragonFadra-LEDE-JP-OP.png
+  image: TenpaiDragonFadora-LEDE-JP-OP.png
 sets:
   ja:
   - set_number: LEDE-JP017
