--- a/data/cards/39402797.yaml
+++ b/data/cards/39402797.yaml
@@ -110,6 +110,10 @@ sets:
     set_name: Duelist Edition Volume 3
     rarities:
     - Super Rare
+  - set_number: 24TP-JP110
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: RGBT-KR043
     set_name: Raging Battle
