--- a/data/cards/13893596.yaml
+++ b/data/cards/13893596.yaml
@@ -133,6 +133,10 @@ sets:
     set_name: Millennium Pack (OCG)
     rarities:
     - Millennium Super Rare
+  - set_number: 24TP-JP109
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: SD17-KR006
     set_name: "Structure Deck: Warriors' Strike"
