--- a/data/cards/18563744.yaml
+++ b/data/cards/18563744.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: Prismatic God Box
     rarities:
     - Millennium Rare
+  - set_number: 24TP-JP113
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: DP17-KR003
     set_name: "Duelist Pack: Pharaoh's Memories"
