--- a/data/cards/20802187.yaml
+++ b/data/cards/20802187.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: V Jump Edition 7
     rarities:
     - Ultra Rare
+  - set_number: 24TP-JP115
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: PP08-KR027
     set_name: Premium Pack Vol.8
