--- a/data/cards/71829750.yaml
+++ b/data/cards/71829750.yaml
@@ -89,6 +89,10 @@ sets:
     set_name: Beginner's Edition 2 (2011)
     rarities:
     - Common
+  - set_number: 24TP-JP107
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: LOD-KR057
     set_name: Legacy of Darkness
