--- a/data/cards/yugipedia1034426.yaml
+++ b/data/cards/yugipedia1034426.yaml
@@ -32,6 +32,7 @@ attribute: LIGHT
 level: 8
 atk: 2800
 def: 1500
+materials: 1 "Melodious Maestra" monster + 2 "Melodious" monsters
 series:
 - Melodious
 images:
