--- a/data/cards/06150044.yaml
+++ b/data/cards/06150044.yaml
@@ -57,6 +57,7 @@ images:
   illustration: ArcanaKnightJoker-MADU-EN-VG-artwork.png
 - index: 2
   image: ArcanaKnightJoker-SDMY-EN-C-1E.png
+  illustration: ArcanaKnightJoker-CA-2.png
 sets:
   en:
   - set_number: ANPR-EN090
