--- a/data/cards/31305911.yaml
+++ b/data/cards/31305911.yaml
@@ -46,6 +46,7 @@ images:
   illustration: Marshmallon-MADU-EN-VG-artwork.png
 - index: 2
   image: Marshmallon-711C-JP-NPR.png
+  illustration: Marshmallon-CA-2.png
 sets:
   en:
   - set_number: PP01-EN003
