--- a/data/cards/44508094.yaml
+++ b/data/cards/44508094.yaml
@@ -63,6 +63,7 @@ images:
   illustration: StardustDragon-OW-2.png
 - index: 3
   image: StardustDragon-CCC1-JP-NPR.png
+  illustration: StardustDragon-CA-3.png
 sets:
   en:
   - set_number: CT05-EN001
