--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -69,10 +69,13 @@ images:
   illustration: DarkMagician-DULI-EN-VG-artwork-6.png
 - index: 9
   image: DarkMagician-PPC1-JP-C.png
+  illustration: DarkMagician-CA-9.png
 - index: 10
   image: DarkMagician-CCC1-JP-NPR.png
+  illustration: DarkMagician-CA-10.png
 - index: 11
   image: DarkMagician-711C-JP-NPR.png
+  illustration: DarkMagician-CA-11.png
 sets:
   en:
   - set_number: SYE-001
