--- a/data/cards/78193831.yaml
+++ b/data/cards/78193831.yaml
@@ -51,6 +51,7 @@ images:
   illustration: BusterBlader-TF05-JP-VG-2-artwork.png
 - index: 3
   image: BusterBlader-711C-JP-NPR.png
+  illustration: BusterBlader-CA-3.png
 sets:
   en:
   - set_number: DB1-EN095
