--- a/data/cards/98502113.yaml
+++ b/data/cards/98502113.yaml
@@ -66,6 +66,7 @@ images:
   illustration: DarkPaladin-TF05-JP-VG-artwork.png
 - index: 4
   image: DarkPaladin-711C-JP-NPR.png
+  illustration: DarkPaladin-CA-4.png
 sets:
   en:
   - set_number: DR1-EN160
