--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -42,6 +42,7 @@ images:
   illustration: ReinforcementoftheArmy-MADU-EN-VG-artwork.png
 - index: 2
   image: ReinforcementoftheArmy-PPC2-JP-C.png
+  illustration: ReinforcementoftheArmy-CA-2.png
 sets:
   en:
   - set_number: LOD-EN028
