--- a/data/cards/43316238.yaml
+++ b/data/cards/43316238.yaml
@@ -48,6 +48,7 @@ images:
   illustration: DangerBigfoot-MADU-EN-VG-artwork.png
 - index: 2
   image: DangerBigfoot-MGED-EN-PGR-1E-AA.png
+  illustration: DangerBigfoot-CA-2.png
 sets:
   en:
   - set_number: CYHO-EN082
