--- a/data/cards/55878038.yaml
+++ b/data/cards/55878038.yaml
@@ -79,6 +79,7 @@ images:
   illustration: ChaosDragonLevianeer-MADU-EN-VG-artwork.png
 - index: 2
   image: ChaosDragonLevianeer-MAGO-EN-PGR-1E-AA.png
+  illustration: ChaosDragonLevianeer-CA-2.png
 sets:
   en:
   - set_number: SOFU-EN025
