--- a/data/cards/60643553.yaml
+++ b/data/cards/60643553.yaml
@@ -58,8 +58,10 @@ images:
   illustration: GhostSisterSpookyDogwood-MADU-EN-VG-artwork.png
 - index: 2
   image: GhostSisterSpookyDogwood-RC03-JP-PGR-AA.png
+  illustration: GhostSisterSpookyDogwood-OW-2.png
 - index: '2.1'
   image: GhostSisterSpookyDogwood-MAGO-EN-PGR-1E-AA.png
+  illustration: GhostSisterSpookyDogwood-CA-EN-2.png
 sets:
   en:
   - set_number: DANE-EN025
