--- a/data/cards/55343236.yaml
+++ b/data/cards/55343236.yaml
@@ -8,7 +8,7 @@ name:
   it: Drago Nero Occhi Rossi Maligno
   pt: Dragão Negro de Olhos Vermelhos Pernicioso
   ja: <ruby>Ｓｉｎ<rt>シン</rt></ruby> <ruby>真紅眼の黒竜<rt>レッドアイズ・ブラックドラゴン</rt></ruby>
-  ja_romaji: Shin Reddoaizu Burakkudoragon
+  ja_romaji: Shin Reddoaizu Burakku Doragon
   ko: <ruby>Sin<rt>신</rt></ruby> 붉은 눈의 흑룡
   ko_rr: Sin Bulk-eun Nun-ui Heungnyong
   zh-TW:
