--- a/rush.yaml
+++ b/rush.yaml
@@ -127865,3 +127865,290 @@ sets:
     rarities:
     - Ultra Rare
 yugipedia_page_id: 1034536
+---
+konami_id:
+name:
+  en: Eternal Wolf of the Blaze Fiends
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 焔魔の永狼
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 Fiend Type monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 Spell/Trap Card on your opponent's field. Then, if you sent a Level 10 monster to the Graveyard to meet the requirement, you can add 1 Level 4 Fiend Type monster with 0 ATK from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: FIRE
+level: 6
+atk: 1600
+def: 0
+series:
+- Blaze Fiend
+images:
+- index: 1
+  image: EternalWolfoftheBlazeFiends-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP073
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1034593
+---
+konami_id:
+name:
+  en: Magical Retribution
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: マジカル・リトリビューション
+  ja_romaji: Majikaru Ritoribyūshon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When a card(s) on your field is destroyed by an opponent's attack or their card effect, pay 800 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 face-up Level 8 or lower Effect Monster or 1 face-down card on your opponent's field. Then, you can Special Summon 1 Level 6 DARK Attribute Spellcaster Type monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: MagicalRetribution-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP028
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1034594
+---
+konami_id:
+name:
+  en: Hammer Shot
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 Attack Position monster with the highest ATK on the field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+legend: true
+images:
+- index: 1
+  image: HammerShot-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP058
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1034595
+---
+konami_id:
+name:
+  en: Magical Firestorm
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: マジカル・ファイアストーム
+  ja_romaji: Majikaru Faiasutōmu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy face-up monsters on your opponent's field whose original Level is 6 or lower, up to [the number of face-up Spellcaster Type monsters on your field].
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: MagicalFirestorm-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP084
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1034596
+---
+konami_id:
+name:
+  en: Twin Twinkle Star
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ツイン・クールスター
+  ja_romaji: Tsuin Kūrusutā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Increase this card's Level by 2 until the end of this turn. Then, if you sent a LIGHT Attribute Galaxy Type monster to the Graveyard to meet the requirement, this turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a LIGHT Attribute Galaxy Type monster in Attack Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 4
+atk: 1200
+def: 200
+images:
+- index: 1
+  image: TwinTwinkleStar-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP075
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1034597
