--- a/data/rush/17199.yaml
+++ b/data/rush/17199.yaml
@@ -58,6 +58,10 @@ sets:
     rarities:
     - Ultra Rare
     - Gold Rush Rare
+  - set_number: RD/HC01-JP004
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/GRP1-KR010
     set_name: Grand Rush Pack
