--- a/data/rush/yugipedia1034593.yaml
+++ b/data/rush/yugipedia1034593.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: 焔魔の永狼
-  ja_romaji:
+  ja: <ruby>焔<rt>えん</rt></ruby><ruby>魔<rt>ま</rt></ruby>の<ruby>永<rt>えい</rt></ruby><ruby>狼<rt>ろう</rt></ruby>
+  ja_romaji: Enma no Eirō
   ko:
   ko_rr:
   zh-TW:
