--- a/data/rush/17276.yaml
+++ b/data/rush/17276.yaml
@@ -70,6 +70,11 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Rush Rare
+  - set_number: RD/HC01-JP044
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/KP08-KR000
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
