--- a/data/rush/17288.yaml
+++ b/data/rush/17288.yaml
@@ -60,6 +60,11 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP025
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+    - Secret Rare
   ko:
   - set_number: RD/KP08-KR012
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
