--- a/data/rush/17539.yaml
+++ b/data/rush/17539.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP010
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP09-KR053
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
