--- a/data/rush/18269.yaml
+++ b/data/rush/18269.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: 'Deck Mod Pack: Fortissimo of the Whirlwinds!!'
     rarities:
     - Common
+  - set_number: RD/HC01-JP009
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP11-KR037
     set_name: 'Deck Mod Pack: Fortissimo of the Whirlwinds!!'
