--- a/data/rush/18366.yaml
+++ b/data/rush/18366.yaml
@@ -76,6 +76,10 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: RD/HC01-JP006
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/ORP1-KR037
     set_name: Over Rush Pack
