--- a/data/rush/yugipedia1034594.yaml
+++ b/data/rush/yugipedia1034594.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドのカードが相手の攻撃または相手の効果で破壊された時、８００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示の効果モンスター（レベル８以下）１体または裏側表示のカード１枚を選んで破壊する。その後、自分の墓地のモンスター（レベル６／闇属性／魔法使い族）１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -47,6 +49,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Ultra Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
