--- a/data/cards/kdb19938.yaml
+++ b/data/cards/kdb19938.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>獣<rt>しし</rt></ruby><ruby>累<rt>るい</rt></ruby><ruby>々<rt>るい</rt></ruby>
-  ja_romaji: Shishi Ruirui
+  ja_romaji: Shishiruirui
   ko:
   ko_rr:
   zh-TW:
