--- a/data/cards/51482758.yaml
+++ b/data/cards/51482758.yaml
@@ -8,7 +8,7 @@ name:
   it: Rimuovi Trappola
   pt: Remover Armadilha
   ja: <ruby>罠<rt>わな</rt></ruby>はずし
-  ja_romaji: Wana Hazushi
+  ja_romaji: Wanahazushi
   ko: 함정 해제
   ko_rr:
   zh-TW:
