--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -43,6 +43,8 @@ images:
 - index: 2
   image: ReinforcementoftheArmy-PPC2-JP-C.png
   illustration: ReinforcementoftheArmy-CA-2.png
+- index: 3
+  image: ReinforcementoftheArmy-ART1-JP-OP.png
 sets:
   en:
   - set_number: LOD-EN028
@@ -799,7 +801,7 @@ sets:
     - Secret Rare
     - Extra Secret Rare
     - Quarter Century Secret Rare
-  - set_number: ????-JP001
+  - set_number: ART1-JP001
     set_name: Yu-Gi-Oh! Card Game Art Works promotional card
     rarities:
     - Quarter Century Secret Rare
