--- a/data/cards/yugipedia1035077.yaml
+++ b/data/cards/yugipedia1035077.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>古代の機械競闘<rt>アンティーク・ギアデュエル</rt></ruby>
-  ja_romaji: Antīku Gia Dyueru
+  ja_romaji: Antīku Giadyueru
   ko:
   ko_rr:
   zh-TW:
