--- a/data/rush/yugipedia1035131.yaml
+++ b/data/rush/yugipedia1035131.yaml
@@ -64,6 +64,7 @@ sets:
   - set_number: RD/KP16-JP040
     set_name: Transamu of Transcendence
     rarities:
+    - Super Rare
     - Secret Rare
 is_translation_unofficial:
   name:
