--- a/data/cards/yugipedia1035074.yaml
+++ b/data/cards/yugipedia1035074.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>古代の機械戦車兵<rt>アンティーク・ギアタンカー</rt></ruby>
-  ja_romaji: Antīku Gia Tankā
+  ja_romaji: Antīku Giatankā
   ko:
   ko_rr:
   zh-TW:
