--- a/data/cards/yugipedia1035075.yaml
+++ b/data/cards/yugipedia1035075.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>古代の機械司令<rt>アンティーク・ギアコマンダー</rt></ruby>
-  ja_romaji: Antīku Gia Komandā
+  ja_romaji: Antīku Giakomandā
   ko:
   ko_rr:
   zh-TW:
