--- a/data/cards/yugipedia1035098.yaml
+++ b/data/cards/yugipedia1035098.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>究極竜魔導師<rt>マスター・オブ・ドラゴンマギア</rt></ruby>
-  ja_romaji: Masutā obu Doragon Magia
+  ja_romaji: Masutā Obu Doragon Magia
   ko:
   ko_rr:
   zh-TW:
@@ -32,6 +32,7 @@ attribute: LIGHT
 level: 12
 atk: 5000
 def: 4000
+materials: '"Blue-Eyes Ultimate Dragon" (or 3 "Blue-Eyes" monsters) + 1 "Chaos" or "Black Luster Soldier" Ritual Monster'
 images:
 - index: 1
   image: DragonMagiaMaster-QCDB-JP-OP.png
