--- a/data/cards/yugipedia1035106.yaml
+++ b/data/cards/yugipedia1035106.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>光道の龍<rt>ドラグーン・オブ・ライトロード</rt></ruby>
-  ja_romaji: Doragūn obu Raitorōdo
+  ja_romaji: Doragūn Obu Raitorōdo
   ko:
   ko_rr:
   zh-TW:
