--- a/data/cards/yugipedia1035108.yaml
+++ b/data/cards/yugipedia1035108.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can place 1 other "Lightsworn" card from your hand on top of the Deck; Special Summon this card from your hand, then send the top 2 cards of your Deck to the GY. If this card is sent from the Deck to the GY: You can target 1 "Lightsworn" monster in your GY, except "Vice, Lightsworn Archfiend"; Special Summon it. You can only use each effect of "Weiss, Lightsworn Archfiend" once per turn.
+    You can place 1 other "Lightsworn" card from your hand on top of the Deck; Special Summon this card from your hand, then send the top 2 cards of your Deck to the GY. If this card is sent from the Deck to the GY: You can target 1 "Lightsworn" monster in your GY, except "Weiss, Lightsworn Archfiend"; Special Summon it. You can only use each effect of "Weiss, Lightsworn Archfiend" once per turn.
   de:
   es:
   fr:
