--- a/data/rush/yugipedia1035214.yaml
+++ b/data/rush/yugipedia1035214.yaml
@@ -6,15 +6,15 @@ name:
   fr:
   it:
   pt:
-  ja: 人造人間７.７号
-  ja_romaji:
+  ja: <ruby>人<rt>じん</rt></ruby><ruby>造<rt>ぞう</rt></ruby><ruby>人<rt>にん</rt></ruby><ruby>間<rt>げん</rt></ruby>７．７<ruby>号<rt>ごう</rt></ruby>
+  ja_romaji: Jinzōningen Nana-ten-Nana-gō
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 requirement:
   en: |-
-    Place 1 monster from your Graveyard on the bottom of the Deck.
+    Place 1 monster from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -42,6 +42,8 @@ attribute: DARK
 level: 2
 atk: 700
 def: 700
+series:
+- Jinzo
 images:
 - index: 1
   image: Jinzo77-RDKP16-JP-OP.png
