--- a/data/rush/18755.yaml
+++ b/data/rush/18755.yaml
@@ -42,7 +42,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 600 ATK until the end of this turn. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
+    This card gains 600 ATK until the end of this turn. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of their next turn.
   de:
   es:
   fr:
