--- a/data/rush/19100.yaml
+++ b/data/rush/19100.yaml
@@ -42,7 +42,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card's name becomes "Harpie Lady", and your opponent cannot activate Trap Cards when this card declares an attack.
+    Until the end of your opponent's next turn, this card's name becomes "Harpie Lady", and your opponent cannot activate Trap Cards when it declares an attack.
   de:
   es:
   fr:
