--- a/data/rush/19549.yaml
+++ b/data/rush/19549.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-down Spell/Trap Card on your opponent's field cannot be activated until the end of your opponent's next turn.
+    1 face-down Spell/Trap Card on your opponent's field cannot be activated until the end of their next turn.
   de:
   es:
   fr:
