--- a/data/rush/yugipedia1035059.yaml
+++ b/data/rush/yugipedia1035059.yaml
@@ -68,6 +68,7 @@ sets:
     set_name: Transamu of Transcendence
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
