--- a/data/rush/yugipedia1035216.yaml
+++ b/data/rush/yugipedia1035216.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: マシン・インスペクター
-  ja_romaji:
+  ja_romaji: Mashin Insupekutā
   ko:
   ko_rr:
   zh-TW:
@@ -38,6 +38,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Jinzo
 images:
 - index: 1
   image: MachineInspector-RDKP16-JP-OP.png
