--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -740,7 +740,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-JPL37
-    set_name: 'Duelist Set: Version Lightlord Judgment Enhancement Pack'
+    set_name: 'Duelist Set: Version Lightsworn Judgment Enhancement Pack'
     rarities:
     - Ultra Rare
   - set_number: ST14-JPA05
