--- a/rush.yaml
+++ b/rush.yaml
@@ -122401,7 +122401,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    2 or more face-up monsters with the same Attribute are on the field.
+    2 or more monsters with the same Attribute are among all the face-up monsters on the field.
   de:
   es:
   fr:
