--- a/data/cards/83589191.yaml
+++ b/data/cards/83589191.yaml
@@ -1,5 +1,5 @@
 konami_id: 19937
-password:
+password: 83589191
 name:
   en: Life Hack
   de:
@@ -46,4 +46,3 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1034834
-fake_password: 100303004
